--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,23 +1,36 @@
 name: Go
 on: [push]
-jobs:
-
+jobs:  
+  setup:
+    name: Setup
+    runs-on: [macos]
+    steps:
+      - name: Set up Go 1.13
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+        id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+  lint:
+    name: Lint
+    runs-on: [macos]
+    needs: setup
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Download golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.1
+      - name: Lint
+        run: $(go env GOPATH)/bin/golangci-lint run -v
   test:
     name: Test
     runs-on: [macos]
+    needs: setup
     steps:
-
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: go get -v -t -d ./...
-
-    - name: Test
-      run: go test
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test
