Add godoc everywhere and make linter insist on it
Also group URL constants together.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,6 +10,7 @@ linters:
   enable-all: true
 
 issues:
+  exclude-use-default: false
   exclude-rules:
     # Disable magic number linter in test files
     - path: _test.go
