--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
       - name: Download golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.27.0
       - name: Lint
-        run: $(go env GOPATH)/bin/golangci-lint run -v
+        run: $(go env GOPATH)/bin/golangci-lint run
   test:
     name: Test
     runs-on: [macos-latest]
